--- a/styles.css
+++ b/styles.css
@@ -46,17 +46,18 @@ body {
 --------------------------------------------------------------------------------- */
 
 button {
-    background-color: #ff4500;
-    color: white;
+    background-color: #0064FF;
+    color: #ffffff;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 1rem;
+    transition: background 0.2s ease-in-out;
 }
 
 button:hover {
-    background-color: #cc3700;
+    background-color: #003585;
 }
 
 
@@ -186,7 +187,7 @@ nav {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: brightness(50%);
     z-index: 1;
 }
 
@@ -215,6 +216,7 @@ nav {
     font-size: 3.5rem;
     font-weight: bold;
     margin-bottom: 0px;
+    text-transform: uppercase;
 }
 
 .hero-text p {
@@ -224,7 +226,7 @@ nav {
 /* Responsive Design Hero */
 @media (max-width: 600px) {
     .hero-text h1 {
-    font-size: 1.8rem;
+    font-size: 2.3rem;
 }
 
 .hero-text p {
@@ -246,7 +248,7 @@ nav {
 
 /* Titel & Untertitel der Unterseiten*/
 .page-title h1 {
-    font-size: 2.5rem;
+    font-size: 3.0rem;
     font-weight: bold;
     margin-bottom: 10px;
 }
@@ -258,7 +260,7 @@ nav {
 /* Responsive Design Titel Unterseiten */
 @media (max-width: 600px) {
     .page-title h1 {
-    font-size: 1.8rem;
+    font-size: 2.0rem;
 }
 
 .page-title p {
@@ -276,11 +278,6 @@ main {
     flex-direction: column;
     align-items: center;
     padding: 20px;
-}
-
-/* Responsive Design main */
-main {
-    padding: 10px;
 }
 
 
@@ -459,6 +456,14 @@ main {
     margin-bottom: 8px;
   }
 
+  /* Responsive Design Galerie */
+@media (max-width: 600px) {
+    .column {
+        flex: 50%;
+        max-width: 90%;
+    }
+}
+
 
 /* 10. Kontaktseite
 --------------------------------------------------------------------------------- */
@@ -481,7 +486,7 @@ main {
     padding: 20px;
 }
 
-/* Formular mit garantierten 800px Breite */
+/* Formular mit 800px Breite */
 form {
     display: flex;
     flex-direction: column;
@@ -520,19 +525,19 @@ form textarea {
 
 /* Senden-Button */
 form input[type="submit"] {
-    background-color: #ff4500;
-    color: white;
+    background-color: #0064FF;
+    color: #ffffff;
     font-size: 1rem;
     padding: 12px;
     margin-top: 15px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: background 0.3s ease-in-out;
+    transition: background 0.2s ease-in-out;
 }
 
 form input[type="submit"]:hover {
-    background-color: #cc3700;
+    background-color: #003585;
 }
 
 /* Responsive Design */
