--- a/styles.css
+++ b/styles.css
@@ -68,9 +68,9 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 40px; /* Anpassung für bessere Höhe */
+    padding: 15px 40px;
     position: relative;
-    height: 70px; /* Einheitliche Höhe für Logo & Burger */
+    height: 70px;
 }
 
 /* Logo in der Navigation */
@@ -102,6 +102,7 @@ nav {
     text-decoration: none;
     color: #333;
     font-weight: bold;
+    font-size: 1.2rem;
 }
 
 /* Burger-Menü (mobil) */
@@ -112,7 +113,7 @@ nav {
     cursor: pointer;
     position: absolute;
     right: 40px;
-    top: 50%;
+    top: 55px;
     transform: translateY(-50%);
 }
 
@@ -175,7 +176,7 @@ nav {
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: white;
+    color: #ffffff;
     overflow: hidden;
 }
 
@@ -187,7 +188,7 @@ nav {
     left: 0;
     width: 100%;
     height: 100%;
-    backdrop-filter: brightness(50%);
+    backdrop-filter: brightness(30%);
     z-index: 1;
 }
 
@@ -209,6 +210,7 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-shadow:  2px 2px 4px rgba(0, 0, 0, 0.75);
 }
 
 /* Titel & Untertitel */
@@ -230,7 +232,7 @@ nav {
 }
 
 .hero-text p {
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 }
 
@@ -277,7 +279,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
 }
 
 
@@ -427,7 +429,7 @@ main {
     }
 
     .blog-card {
-        width: 90%;
+        width: 100%;
     }
 }
 
