--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,14 @@ button:hover {
 /* 3. Navigation
 --------------------------------------------------------------------------------- */
 
+header {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+}
+
 nav {
     display: flex;
     justify-content: space-between;
