--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,14 @@ button {
 
 button:hover {
     background-color: #003585;
-}
+    animation: pulseHover 0.3s ease-in-out;
+  }
+  
+  @keyframes pulseHover {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.08); }
+    100% { transform: scale(1); }
+  }
 
 
 /* 3. Navigation
@@ -468,6 +475,7 @@ main {
     margin-bottom: 8px;
   }
 
+
   /* Responsive Design Galerie */
 @media (max-width: 600px) {
     .column {
@@ -713,9 +721,6 @@ footer ul li a {
     transition: background-color 0.5s ease;
 }
 
-#toTopBtn:hover {
-    background-color: #003585;
-}
 
 #toTopBtn.show {
     display: block;
