--- a/styles.css
+++ b/styles.css
@@ -197,18 +197,6 @@ nav {
     overflow: hidden;
 }
 
-/* Overlay */
-.hero::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    backdrop-filter: brightness(30%);
-    z-index: 1;
-}
-
 /* Hintergrundbild */
 .hero img {
     position: absolute;
@@ -220,6 +208,20 @@ nav {
     z-index: 0;
 }
 
+/* Sanftes Einblenden des Hero-Images */
+@keyframes fadeInHero {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+  .hero img {
+    animation: fadeInHero 3.0s ease-out;
+  }  
+
 /* Hero-Text */
 .hero-text {
     position: relative;
@@ -228,11 +230,13 @@ nav {
     flex-direction: column;
     align-items: center;
     text-shadow:  2px 2px 4px rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 10px 60px 30px;
 }
 
 /* Titel & Untertitel */
 .hero-text h1 {
-    font-size: 3.5rem;
+    font-size: 3.0rem;
     font-weight: bold;
     margin-bottom: 0px;
     text-transform: uppercase;
@@ -267,7 +271,7 @@ nav {
 
 /* Titel & Untertitel der Unterseiten*/
 .page-title h1 {
-    font-size: 3.0rem;
+    font-size: 3.3rem;
     font-weight: bold;
     margin-bottom: 10px;
 }
